--- a/css/sub2.css
+++ b/css/sub2.css
@@ -1,5 +1,11 @@
 @import url(./common.css);
 @import url(./header.css);
+@font-face {
+  font-family: "GangwonEdu_OTFBoldA";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 @keyframes line {
   0% {
     left: 0;
@@ -70,6 +76,19 @@
     opacity: 1;
   }
 }
+.guide {
+  position: absolute;
+  z-index: 99;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  color: rgba(255, 255, 255, 0.75);
+}
+
+.hover {
+  opacity: 0;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -128,10 +147,18 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: baseline;
   padding-top: 8%;
   align-items: top;
   overflow: hidden;
+}
+
+.projectName {
+  font-family: "GangwonEdu_OTFBoldA";
+  color: white;
+  margin-bottom: 40px;
 }
 
 .thumb {
@@ -139,7 +166,6 @@
   height: 510px;
   perspective: 1500px;
   position: relative;
-  margin-top: 1vw;
 }
 .thumb .mainpic {
   display: block;
@@ -301,12 +327,13 @@
 
 .ex {
   padding: 25px;
-  font-size: 20px;
+  font-size: 28px;
   line-height: 30px;
   display: flex;
   flex-direction: column;
   align-items: left;
   position: relative;
+  font-family: "GangwonEdu_OTFBoldA";
 }
 .ex li {
   margin: 15px 0;
@@ -315,18 +342,18 @@
   display: flex;
 }
 .ex li p {
-  font-size: 17px;
+  font-size: 18px;
 }
 .ex li p:first-child {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 22px;
   width: 12%;
 }
 .ex li p:nth-child(2) {
   width: 88%;
 }
 .ex li a {
-  font-size: 18px;
+  font-size: 19px;
   margin-right: 25px;
   line-height: 30px;
   text-decoration: underline;
