--- a/css/sub2.scss
+++ b/css/sub2.scss
@@ -3,6 +3,13 @@
 $color-bg: #306d8c;
 $ticket-red: hsl(355, 63%, 59%);
 
+@font-face {
+  font-family: 'GangwonEdu_OTFBoldA';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @keyframes line {
   0% {
     left: 0;
@@ -76,6 +83,19 @@ $ticket-red: hsl(355, 63%, 59%);
   }
 }
 
+.guide{
+  position: absolute;
+  z-index: 99;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  color: rgba(255, 255, 255, 0.75);
+}
+
+.hover{
+  opacity: 0;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -134,10 +154,18 @@ $ticket-red: hsl(355, 63%, 59%);
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content:baseline;
   padding-top: 8%;
   align-items: top;
   overflow: hidden;
+}
+
+.projectName{
+  font-family: 'GangwonEdu_OTFBoldA';
+  color: white;
+  margin-bottom: 40px;
 }
 
 .thumb {
@@ -145,7 +173,7 @@ $ticket-red: hsl(355, 63%, 59%);
   height: 510px;
   perspective: 1500px;
   position: relative;
-  margin-top: 1vw;
+
   .mainpic {
     display: block;
     width: 100%;
@@ -309,22 +337,24 @@ $ticket-red: hsl(355, 63%, 59%);
 
 .ex {
   padding: 25px;
-  font-size: 20px;
+  font-size: 28px;
   line-height: 30px;
   display: flex;
   flex-direction: column;
   align-items: left;
   position: relative;
+  font-family: 'GangwonEdu_OTFBoldA';
+
   li {
     margin: 15px 0;
     padding: 15px 15px 0;
     border-top: 1px solid rgb(180, 180, 180);
     display: flex;
     p {
-      font-size: 17px;
+      font-size: 18px;
       &:first-child {
         font-weight: bold;
-        font-size: 18px;
+        font-size: 22px;
         width: 12%;
       }
       &:nth-child(2) {
@@ -333,7 +363,7 @@ $ticket-red: hsl(355, 63%, 59%);
     }
   }
   li a {
-    font-size: 18px;
+    font-size: 19px;
     margin-right: 25px;
     line-height: 30px;
     text-decoration: underline;
