--- a/css/main.scss
+++ b/css/main.scss
@@ -240,7 +240,7 @@ main {
   font-size: 22px;
   color: rgb(226, 160, 165);
   &::before {
-    content: "⬆️";
+    content: "↑";
     background-color: transparent;
     position: absolute;
     top: 0px;
@@ -262,7 +262,7 @@ main {
   font-size: 20px;
   color: rgb(229, 31, 47);
   &::before {
-    content: "⬆️";
+    content: "↑";
     background-color: transparent;
     position: absolute;
     top: 0px;
