--- a/css/headerM.css
+++ b/css/headerM.css
@@ -117,4 +117,13 @@ header nav a.active::after, header nav a:hover::after {
 html,
 body {
   width: 100%;
+}
+
+@media only screen and (max-width: 1200px) {
+  header .ticket {
+    transform: scale(0.8) translateY(-50px);
+  }
+  header nav a {
+    font-size: 1.3rem;
+  }
 }/*# sourceMappingURL=headerM.css.map */
