--- a/css/header.scss
+++ b/css/header.scss
@@ -145,3 +145,29 @@ html,
 body {
   width: 100%;
 }
+
+@media only screen and (max-width: 1200px) {
+  @keyframes ani {
+    0% {
+      transform: scale(0.9) translateY(0px);
+    }
+    50% {
+      transform: scale(0.9) translateY(6px);
+    }
+    50% {
+      transform: scale(0.9) translateY(-2px);
+    }
+  }
+
+  header {
+    padding: 0;
+    .ticket {
+      transform: scale(0.9);
+    }
+    nav {
+      a {
+        font-size: 1.3rem;
+      }
+    }
+  }
+}
