--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,7 @@ body {
 main {
   margin-top: 160px;
   display: flex;
+  z-index: 1;
   .bg1 {
     position: absolute;
     top: 0;
@@ -43,7 +44,7 @@ main {
     transition: 0.6s;
     text-align: left;
     .poster2ex {
-      right: 10%;
+      right: 8%;
     }
   }
 
@@ -58,24 +59,26 @@ main {
     transition: 0.6s;
     text-align: right;
     .posterex {
-      left: 10%;
+      left: 8%;
     }
   }
 
   .poster2ex,
   .posterex {
     opacity: 0;
-    width: 40%;
+    width: 45%;
     position: absolute;
     top: 200px;
     color: white;
     z-index: 1;
   }
+
   h2 {
     font-size: 3rem;
     margin-bottom: 100px;
     width: 100%;
   }
+
   li {
     font-size: 1.5rem;
     margin: 10px 0;
@@ -96,25 +99,20 @@ main {
 }
 
 .poster {
-  width: 380px;
+  width: 400px;
   height: 600px;
   position: absolute;
   top: 15.5%;
-  right: 0;
-  transform: translateX(-13vw);
   transition: 0.5s;
   box-sizing: border-box;
   background-color: white;
   box-shadow: 0 3px 14px rgba(0, 0, 0, 0.6);
   animation: updown 1.5s infinite alternate;
-  filter: saturate(70%) contrast(85%);
-  img {
-    width: 360px;
-    margin: 20px auto;
-    display: block;
-    z-index: 1;
-    border: 1px solid rgb(147, 147, 147);
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
   &::before,
   &::after {
     content: "";
@@ -126,150 +124,112 @@ main {
     height: 4%;
     bottom: -4%;
     background-repeat: no-repeat;
-    background-image: linear-gradient(177deg, rgba(0, 0, 0, 0.231) 10%, transparent 50%),
-      linear-gradient(-177deg, rgba(0, 0, 0, 0.231) 10%, transparent 50%);
     background-size: 49% 100%;
     background-position: 2% 0, 98% 0;
   }
-  &:after {
-    height: 100%;
-    top: 0;
-    z-index: 2;
-    background-repeat: no-repeat;
-    background-image: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.1) 0.5%,
-        rgba(255, 255, 255, 0.15) 1.2%,
-        transparent 1.2%
-      ),
-      linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0.5%, rgba(255, 255, 255, 0.15) 1.2%, transparent 1.2%),
-      linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0.5%, rgba(255, 255, 255, 0.15) 1.2%, transparent 1.2%),
-      linear-gradient(265deg, rgba(255, 255, 255, 0.2), transparent 10%),
-      linear-gradient(5deg, rgba(255, 255, 255, 0.2), transparent 15%),
-      linear-gradient(-5deg, rgba(255, 255, 255, 0.1), transparent 10%),
-      linear-gradient(5deg, rgba(255, 255, 255, 0.1), transparent 10%),
-      linear-gradient(-265deg, rgba(255, 255, 255, 0.2), transparent 10%),
-      linear-gradient(-5deg, rgba(255, 255, 255, 0.2), transparent 15%),
-      linear-gradient(266deg, rgba(255, 255, 255, 0.2), transparent 10%);
-    background-size: 50% 100%, 100% 33.3%, 100% 33.3%, 50% 33.3%, 50% 33.3%, 50% 33.3%, 50% 33.3%, 50% 33.3%,
-      50% 33.3%, 50% 33.3%;
-    background-position: right top, left center, left bottom, left top, left top, right top, left center,
-      right center, right center, left bottom;
+}
+
+.p1 {
+  right: 13vw;
+  img {
+    width: 380px;
+    display: block;
+    z-index: 1;
+    border: 1px solid rgb(226, 226, 226);
+  }
+}
+
+.p2 {
+  left: 13vw;
+  img {
+    width: 380px;
+    display: block;
+    z-index: 1;
+    border: 1px solid rgb(147, 147, 147);
+  }
+}
+
+.clickguide {
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  top: 55px;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  z-index: 999;
+  p {
+    width: 50%;
+    text-align: center;
+    opacity: 0;
+    font-weight: bolder;
+    color: white;
+    font-size: 24px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  main {
+    .poster2ex,
+    .posterex {
+      opacity: 0;
+      width: 48%;
+    }
+
+    .bg1 {
+      .poster2ex {
+        right: 1%;
+      }
+    }
+    .bg2 {
+      .posterex {
+        left: 1%;
+      }
+    }
+
+    h2 {
+      font-size: 1.8rem;
+    }
+
+    li {
+      font-size: 1.1rem;
+    }
   }
 
-  &:hover {
-    .plzclick {
-      opacity: 1;
-      animation: blink 1s infinite alternate;
-      transition: 0.5s;
-      transition-delay: 0.5s;
+  .popcorn {
+    height: 220px;
+  }
+
+  .poster {
+    width: 32vw;
+    height: 45vw;
+    min-width: 300px;
+    min-height: 440px;
+    transform: translateY(40px);
+  }
+
+  .p1 {
+    right: 7vw;
+    img {
+      width: 30vw;
+      min-width: 280px;
+      display: block;
+      z-index: 1;
+      border: 1px solid rgb(226, 226, 226);
+    }
+  }
+
+  .p2 {
+    left: 7vw;
+    img {
+      width: 30vw;
+      min-width: 290px;
+      display: block;
+      z-index: 1;
+      border: 1px solid rgb(147, 147, 147);
     }
   }
 }
-.poster2 {
-  width: 440px;
-  height: 580px;
-  position: absolute;
-  top: 16%;
-  left: 0;
-  transform: translateX(11vw);
-  transition: 0.5s;
-  box-sizing: border-box;
-  background-color: white;
-  box-shadow: 0 3px 14px rgba(0, 0, 0, 0.6);
-  filter: saturate(70%) contrast(85%);
-  animation: updown 2s infinite alternate;
-  img {
-    width: 410px;
-    margin: 20px auto;
-    display: block;
-    z-index: 1;
-    border: 1px solid rgb(147, 147, 147);
-  }
-  &::before,
-  &::after {
-    content: "";
-    width: 100%;
-    left: 0;
-    position: absolute;
-  }
-  &::before {
-    height: 4%;
-    bottom: -4%;
-    background-repeat: no-repeat;
-    background-image: linear-gradient(177deg, rgba(0, 0, 0, 0.231) 10%, transparent 50%),
-      linear-gradient(-177deg, rgba(0, 0, 0, 0.231) 10%, transparent 50%);
-    background-size: 49% 100%;
-    background-position: 2% 0, 98% 0;
-  }
-  &:after {
-    height: 100%;
-    top: 0;
-    z-index: 2;
-    background-repeat: no-repeat;
-    background-image: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.1) 0.5%,
-        rgba(255, 255, 255, 0.15) 1.2%,
-        transparent 1.2%
-      ),
-      linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0.5%, rgba(255, 255, 255, 0.15) 1.2%, transparent 1.2%),
-      linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0.5%, rgba(255, 255, 255, 0.15) 1.2%, transparent 1.2%),
-      linear-gradient(265deg, rgba(255, 255, 255, 0.2), transparent 10%),
-      linear-gradient(5deg, rgba(255, 255, 255, 0.2), transparent 15%),
-      linear-gradient(-5deg, rgba(255, 255, 255, 0.1), transparent 10%),
-      linear-gradient(5deg, rgba(255, 255, 255, 0.1), transparent 10%),
-      linear-gradient(-265deg, rgba(255, 255, 255, 0.2), transparent 10%),
-      linear-gradient(-5deg, rgba(255, 255, 255, 0.2), transparent 15%),
-      linear-gradient(266deg, rgba(255, 255, 255, 0.2), transparent 10%);
-    background-size: 50% 100%, 100% 33.3%, 100% 33.3%, 50% 33.3%, 50% 33.3%, 50% 33.3%, 50% 33.3%, 50% 33.3%,
-      50% 33.3%, 50% 33.3%;
-    background-position: right top, left center, left bottom, left top, left top, right top, left center,
-      right center, right center, left bottom;
-  }
-}
 
-.plzclick {
-  width: 42%;
-  margin: 0 56px;
-  text-align: center;
-  position: absolute;
-  top: 80px;
-  right: 0;
-  opacity: 0;
-  font-size: 22px;
-  color: rgb(226, 160, 165);
-  &::before {
-    content: "↑";
-    background-color: transparent;
-    position: absolute;
-    top: 0px;
-    left: 56%;
-    transform: translateX(-50%);
-    width: 20px;
-    height: 20px;
-    color: rgb(226, 160, 165);
-  }
-}
-.plzclick2 {
-  width: 42%;
-  margin: 0 42px;
-  text-align: center;
-  position: absolute;
-  top: 80px;
-  left: 0;
-  opacity: 0;
-  font-size: 20px;
-  color: rgb(229, 31, 47);
-  &::before {
-    content: "↑";
-    background-color: transparent;
-    position: absolute;
-    top: 0px;
-    left: 56%;
-    transform: translateX(-50%);
-    width: 20px;
-    height: 20px;
-    color: rgb(229, 31, 47);
-  }
+@media only screen and (max-width: 768px) {
 }
