--- a/css/sub2.css
+++ b/css/sub2.css
@@ -158,14 +158,16 @@
 .projectName {
   font-family: "GangwonEdu_OTFBoldA";
   color: white;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  transform: translateY(-50px);
 }
 
 .thumb {
-  width: 1100px;
-  height: 510px;
+  width: 1000px;
+  height: 490px;
   perspective: 1500px;
   position: relative;
+  transform: translateY(-50px);
 }
 .thumb .mainpic {
   display: block;
@@ -183,19 +185,16 @@
 .thumb .mainpic::after {
   content: "";
   position: absolute;
-  top: 100%;
+  bottom: 0px;
   left: 0;
   width: 100%;
-  height: 35px;
+  height: 30px;
   text-align: center;
-  transform: rotateX(-80deg);
-  transform-origin: top;
+  transform-origin: bottom;
+  transform: rotateX(90deg);
+  border-radius: 5px;
   z-index: 2;
-  background: inherit;
-  background-size: cover, cover;
-  background-position: 0 -515px;
-  letter-spacing: 8px;
-  border-radius: 0 0 30px 30px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .thumb .light {
   position: absolute;
@@ -203,9 +202,9 @@
   left: 50%;
   width: 0;
   height: 0;
-  border-bottom: 320px solid transparent;
+  border-bottom: 300px solid transparent;
   border-left: 0px solid transparent;
-  border-top: 320px solid rgba(240, 240, 240, 0.1);
+  border-top: 300px solid rgba(240, 240, 240, 0.1);
   border-right: 0px solid transparent;
   transform: translateY(56%) translateX(-50%) rotateX(0deg);
   filter: blur(10px);
@@ -217,9 +216,9 @@
   left: 50%;
   width: 0;
   height: 0;
-  border-bottom: 460px solid transparent;
+  border-bottom: 420px solid transparent;
   border-left: 0px solid transparent;
-  border-top: 460px solid rgba(255, 255, 255, 0);
+  border-top: 420px solid rgba(255, 255, 255, 0);
   border-right: 0px solid transparent;
   transform: translateY(56%) translateX(-50%) rotateX(35deg);
   filter: blur(25px);
@@ -230,7 +229,7 @@
   height: 90%;
   position: absolute;
   top: 10px;
-  left: 6%;
+  left: 50%;
   color: black;
   transition-duration: 1s;
   background-color: rgb(236, 236, 236);
@@ -239,8 +238,7 @@
   border-radius: 5px;
   opacity: 0;
   z-index: 0;
-  transform: scale(0);
-  transform-origin: center;
+  transform: translateX(-50%);
   box-shadow: 0px 6px 20px 10px rgba(223, 223, 223, 0.5);
 }
 .thumb .mainContents::after {
@@ -277,9 +275,9 @@
   transform-origin: bottom;
 }
 .thumb:hover .mainContents {
-  transform: scale(1);
+  transform: scale(1) translateX(-50%);
   opacity: 1;
-  transition: 1.5s;
+  transition: 1.8s;
   transition-delay: 1s;
 }
 .thumb:hover .mainContents::after {
@@ -366,11 +364,9 @@
   height: auto;
   margin-bottom: 20px;
 }
-
 .ex .img1 {
   width: 120px;
 }
-
 .ex .link {
   position: absolute;
   top: 0;
@@ -379,16 +375,217 @@
   padding-top: 10px;
 }
 
-.ex .nestedUl {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  list-style-type: disc;
+@media only screen and (max-width: 1200px) {
+  .swiper .swiper-button-prev {
+    left: 20px;
+    transform: translateY(-40px);
+  }
+  .swiper .swiper-button-next {
+    right: 20px;
+    transform: translateY(-40px);
+  }
+  .projectName {
+    transform: translateY(0);
+  }
+  .thumb {
+    width: 900px;
+    height: 450px;
+    perspective: 1500px;
+    position: relative;
+    transform: translateY(0);
+  }
+  .thumb .light {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-bottom: 100px solid transparent;
+    border-left: 0px solid transparent;
+    border-top: 100px solid rgba(240, 240, 240, 0.1);
+    border-right: 0px solid transparent;
+    transform: translateY(61%) translateX(-50%) rotateX(0deg);
+    filter: blur(10px);
+    z-index: -1;
+  }
+  .thumb .light2 {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-bottom: 100px solid transparent;
+    border-left: 0px solid transparent;
+    border-top: 100px solid rgba(255, 255, 255, 0);
+    border-right: 0px solid transparent;
+    transform: translateY(56%) translateX(-50%) rotateX(35deg);
+    filter: blur(25px);
+    z-index: 1;
+  }
+  .thumb .mainContents {
+    height: 100%;
+  }
+  .thumb #mirror {
+    transform: rotateX(230deg) translateY(32px) scale(1.15);
+  }
+  .thumb:hover .light {
+    border-bottom: 550px solid transparent;
+    border-left: 400px solid transparent;
+    border-top: 550px solid rgba(250, 250, 250, 0.2);
+    border-right: 400px solid transparent;
+  }
+  .thumb:hover .light2 {
+    border-bottom: 300px solid transparent;
+    border-left: 500px solid transparent;
+    border-top: 300px solid rgba(223, 223, 223, 0.4);
+    border-right: 500px solid transparent;
+  }
 }
-.ex .nestedUl li {
-  border-bottom: none;
-  border-top: none;
-  width: auto;
-  margin: 5px 0;
-  padding: 5px 10px 0;
+@media only screen and (max-width: 1024px) {
+  .swiper .swiper-button-prev {
+    left: 10px;
+    transform: translateY(-40px) scale(0.8);
+  }
+  .swiper .swiper-button-next {
+    right: 10px;
+    transform: translateY(-40px) scale(0.8);
+  }
+  .projectName {
+    transform: translateY(50px);
+  }
+  .thumb {
+    width: 710px;
+    height: 350px;
+    perspective: 1500px;
+    position: relative;
+    transform: translateY(60px);
+  }
+  .thumb .light {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-bottom: 100px solid transparent;
+    border-left: 0px solid transparent;
+    border-top: 100px solid rgba(240, 240, 240, 0.1);
+    border-right: 0px solid transparent;
+    transform: translateY(61%) translateX(-50%) rotateX(0deg);
+    filter: blur(10px);
+    z-index: -1;
+  }
+  .thumb .light2 {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-bottom: 420px solid transparent;
+    border-left: 0px solid transparent;
+    border-top: 420px solid rgba(255, 255, 255, 0);
+    border-right: 0px solid transparent;
+    transform: translateY(56%) translateX(-50%) rotateX(35deg);
+    filter: blur(25px);
+    z-index: 1;
+  }
+  .thumb .mainContents {
+    width: 100%;
+    height: 100%;
+  }
+  .thumb #mirror {
+    transform: rotateX(230deg) translateY(36px) scale(1.12);
+  }
+  .thumb:hover .light {
+    border-bottom: 400px solid transparent;
+    border-left: 360px solid transparent;
+    border-top: 400px solid rgba(250, 250, 250, 0.2);
+    border-right: 360px solid transparent;
+  }
+  .thumb:hover .light2 {
+    border-bottom: 350px solid transparent;
+    border-left: 450px solid transparent;
+    border-top: 350px solid rgba(223, 223, 223, 0.4);
+    border-right: 450px solid transparent;
+    transform: translateY(65%) translateX(-50%) rotateX(85.4deg);
+  }
+  .mainContents {
+    width: 87%;
+    height: 100%;
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    color: black;
+    transition-duration: 1s;
+    background-color: rgb(236, 236, 236);
+    transform-style: preserve-3d;
+    display: block;
+    border-radius: 5px;
+    opacity: 0;
+    z-index: 0;
+    transform: translateX(-50%);
+    box-shadow: 0px 6px 20px 10px rgba(223, 223, 223, 0.5);
+  }
+  .mainContents::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 99.7%;
+    background-color: rgb(160, 160, 160);
+    opacity: 0.3;
+    z-index: 1;
+  }
+  .ex {
+    padding: 10px 15px;
+    line-height: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    position: relative;
+    font-family: "GangwonEdu_OTFBoldA";
+  }
+  .ex li {
+    margin: 7px 0;
+    padding: 15px 15px 0;
+    border-top: 1px solid rgb(180, 180, 180);
+    display: flex;
+  }
+  .ex li p {
+    font-size: 15px;
+  }
+  .ex li p:first-child {
+    font-weight: bold;
+    font-size: 18px;
+    width: 11%;
+  }
+  .ex li p:nth-child(2) {
+    width: 89%;
+  }
+  .ex li a {
+    font-size: 17px;
+    margin-right: 25px;
+    line-height: 30px;
+    text-decoration: underline;
+    color: rgb(111, 111, 111);
+    text-decoration-color: rgb(180, 180, 180);
+    text-underline-offset: 4px;
+  }
+  .ex img {
+    width: 150px;
+    height: auto;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    transform: translateY(-5px);
+  }
+  .ex .img1 {
+    width: 110px;
+  }
+  .ex .link {
+    position: absolute;
+    top: -8px;
+    right: 0;
+    border: none;
+    padding-top: 10px;
+  }
 }/*# sourceMappingURL=sub2.css.map */
