--- a/css/sub2.css
+++ b/css/sub2.css
@@ -150,7 +150,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: baseline;
-  padding-top: 8%;
+  padding-top: 150px;
   align-items: top;
   overflow: hidden;
 }
@@ -277,7 +277,7 @@
 .thumb:hover .mainContents {
   transform: scale(1) translateX(-50%);
   opacity: 1;
-  transition: 1.8s;
+  transition: 2.5s;
   transition-delay: 1s;
 }
 .thumb:hover .mainContents::after {
@@ -294,7 +294,7 @@
   border-left: 460px solid transparent;
   border-top: 550px solid rgba(250, 250, 250, 0.2);
   border-right: 460px solid transparent;
-  transition: 1.5s;
+  transition: 1s;
   transition-delay: 1s;
 }
 .thumb:hover .light2 {
@@ -303,7 +303,7 @@
   border-top: 560px solid rgba(223, 223, 223, 0.4);
   border-right: 600px solid transparent;
   transform: translateY(59%) translateX(-50%) rotateX(85.4deg);
-  transition: 1.4s;
+  transition: 1s;
   transition-delay: 1s;
 }
 
@@ -384,6 +384,9 @@
     right: 20px;
     transform: translateY(-40px);
   }
+  .swiper .swiper-slide {
+    padding-top: 100px;
+  }
   .projectName {
     transform: translateY(0);
   }
@@ -442,23 +445,26 @@
   }
 }
 @media only screen and (max-width: 1024px) {
+  .swiper .swiper-slide {
+    padding-top: 82px;
+  }
   .swiper .swiper-button-prev {
-    left: 10px;
-    transform: translateY(-40px) scale(0.8);
+    left: 50%;
+    transform: translateY(-233px) translateX(-160px) scale(0.8);
   }
   .swiper .swiper-button-next {
-    right: 10px;
-    transform: translateY(-40px) scale(0.8);
+    right: 50%;
+    transform: translateY(-233px) translateX(160px) scale(0.8);
   }
   .projectName {
-    transform: translateY(50px);
+    transform: translateY(100px);
   }
   .thumb {
     width: 710px;
     height: 350px;
     perspective: 1500px;
     position: relative;
-    transform: translateY(60px);
+    transform: translateY(110px);
   }
   .thumb .light {
     position: absolute;
@@ -472,6 +478,7 @@
     border-right: 0px solid transparent;
     transform: translateY(61%) translateX(-50%) rotateX(0deg);
     filter: blur(10px);
+    opacity: 0;
     z-index: -1;
   }
   .thumb .light2 {
@@ -486,6 +493,7 @@
     border-right: 0px solid transparent;
     transform: translateY(56%) translateX(-50%) rotateX(35deg);
     filter: blur(25px);
+    opacity: 0;
     z-index: 1;
   }
   .thumb .mainContents {
@@ -500,6 +508,7 @@
     border-left: 360px solid transparent;
     border-top: 400px solid rgba(250, 250, 250, 0.2);
     border-right: 360px solid transparent;
+    opacity: 1;
   }
   .thumb:hover .light2 {
     border-bottom: 350px solid transparent;
@@ -507,6 +516,7 @@
     border-top: 350px solid rgba(223, 223, 223, 0.4);
     border-right: 450px solid transparent;
     transform: translateY(65%) translateX(-50%) rotateX(85.4deg);
+    opacity: 1;
   }
   .mainContents {
     width: 87%;
@@ -515,15 +525,6 @@
     top: 10px;
     left: 50%;
     color: black;
-    transition-duration: 1s;
-    background-color: rgb(236, 236, 236);
-    transform-style: preserve-3d;
-    display: block;
-    border-radius: 5px;
-    opacity: 0;
-    z-index: 0;
-    transform: translateX(-50%);
-    box-shadow: 0px 6px 20px 10px rgba(223, 223, 223, 0.5);
   }
   .mainContents::after {
     content: "";
@@ -547,7 +548,7 @@
   }
   .ex li {
     margin: 7px 0;
-    padding: 15px 15px 0;
+    padding: 8px 10px 0;
     border-top: 1px solid rgb(180, 180, 180);
     display: flex;
   }
