--- a/css/sub2.scss
+++ b/css/sub2.scss
@@ -158,7 +158,7 @@ $ticket-red: hsl(355, 63%, 59%);
   flex-direction: column;
   align-items: center;
   justify-content: baseline;
-  padding-top: 8%;
+  padding-top: 150px;
   align-items: top;
   overflow: hidden;
 }
@@ -292,7 +292,7 @@ $ticket-red: hsl(355, 63%, 59%);
     .mainContents {
       transform: scale(1) translateX(-50%);
       opacity: 1;
-      transition: 1.8s;
+      transition: 2.5s;
       transition-delay: 1s;
       &::after {
         animation: line 10s 2s 2 linear forwards;
@@ -310,7 +310,7 @@ $ticket-red: hsl(355, 63%, 59%);
       border-left: 460px solid transparent;
       border-top: 550px solid rgba(250, 250, 250, 0.2);
       border-right: 460px solid transparent;
-      transition: 1.5s;
+      transition: 1s;
       transition-delay: 1s;
     }
 
@@ -320,7 +320,7 @@ $ticket-red: hsl(355, 63%, 59%);
       border-top: 560px solid rgba(223, 223, 223, 0.4);
       border-right: 600px solid transparent;
       transform: translateY(59%) translateX(-50%) rotateX(85.4deg);
-      transition: 1.4s;
+      transition: 1s;
       transition-delay: 1s;
     }
   }
@@ -397,6 +397,10 @@ $ticket-red: hsl(355, 63%, 59%);
       right: 20px;
       transform: translateY(-40px);
     }
+
+    .swiper-slide {
+      padding-top: 100px;
+    }
   }
 
   .projectName {
@@ -468,18 +472,21 @@ $ticket-red: hsl(355, 63%, 59%);
 
 @media only screen and (max-width: 1024px) {
   .swiper {
+    .swiper-slide {
+      padding-top: 82px;
+    }
     .swiper-button-prev {
-      left: 10px;
-      transform: translateY(-40px) scale(0.8);
+      left: 50%;
+      transform: translateY(-233px) translateX(-160px) scale(0.8);
     }
     .swiper-button-next {
-      right: 10px;
-      transform: translateY(-40px) scale(0.8);
+      right: 50%;
+      transform: translateY(-233px) translateX(160px) scale(0.8);
     }
   }
 
   .projectName {
-    transform: translateY(50px);
+    transform: translateY(100px);
   }
 
   .thumb {
@@ -487,7 +494,7 @@ $ticket-red: hsl(355, 63%, 59%);
     height: 350px;
     perspective: 1500px;
     position: relative;
-    transform: translateY(60px);
+    transform: translateY(110px);
 
     .light {
       position: absolute;
@@ -501,6 +508,7 @@ $ticket-red: hsl(355, 63%, 59%);
       border-right: 0px solid transparent;
       transform: translateY(61%) translateX(-50%) rotateX(0deg);
       filter: blur(10px);
+      opacity: 0;
       z-index: -1;
     }
 
@@ -516,6 +524,7 @@ $ticket-red: hsl(355, 63%, 59%);
       border-right: 0px solid transparent;
       transform: translateY(56%) translateX(-50%) rotateX(35deg);
       filter: blur(25px);
+      opacity: 0;
       z-index: 1;
     }
 
@@ -534,6 +543,7 @@ $ticket-red: hsl(355, 63%, 59%);
         border-left: 360px solid transparent;
         border-top: 400px solid rgba(250, 250, 250, 0.2);
         border-right: 360px solid transparent;
+        opacity: 1;
       }
 
       .light2 {
@@ -542,6 +552,7 @@ $ticket-red: hsl(355, 63%, 59%);
         border-top: 350px solid rgba(223, 223, 223, 0.4);
         border-right: 450px solid transparent;
         transform: translateY(65%) translateX(-50%) rotateX(85.4deg);
+        opacity: 1;
       }
     }
   }
@@ -553,15 +564,6 @@ $ticket-red: hsl(355, 63%, 59%);
     top: 10px;
     left: 50%;
     color: black;
-    transition-duration: 1s;
-    background-color: rgba(236, 236, 236, 1);
-    transform-style: preserve-3d;
-    display: block;
-    border-radius: 5px;
-    opacity: 0;
-    z-index: 0;
-    transform: translateX(-50%);
-    box-shadow: 0px 6px 20px 10px rgba(223, 223, 223, 0.5);
 
     &::after {
       content: "";
@@ -587,7 +589,7 @@ $ticket-red: hsl(355, 63%, 59%);
 
     li {
       margin: 7px 0;
-      padding: 15px 15px 0;
+      padding: 8px 10px 0;
       border-top: 1px solid rgb(180, 180, 180);
       display: flex;
       p {
