--- a/css/headerM.css
+++ b/css/headerM.css
@@ -85,7 +85,7 @@ header nav {
   justify-content: space-between;
 }
 header nav a {
-  width: 42%;
+  width: 50%;
   text-align: center;
   font-size: 1.5rem;
   display: block;
@@ -125,5 +125,16 @@ body {
   }
   header nav a {
     font-size: 1.3rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  nav a {
+    font-size: 1.2rem;
+  }
+  nav a:nth-child(1) {
+    transform: translateX(-20px);
+  }
+  nav a:nth-child(2) {
+    transform: translateX(20px);
   }
 }/*# sourceMappingURL=headerM.css.map */
