--- a/css/headerM.scss
+++ b/css/headerM.scss
@@ -99,7 +99,7 @@ header {
     display: flex;
     justify-content: space-between;
     a {
-      width: 42%;
+      width: 50%;
       text-align: center;
       font-size: 1.5rem;
       display: block;
@@ -146,6 +146,20 @@ body {
     nav {
       a {
         font-size: 1.3rem;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  nav {
+    a {
+      font-size: 1.2rem;
+      &:nth-child(1) {
+        transform: translateX(-20px);
+      }
+      &:nth-child(2) {
+        transform: translateX(20px);
       }
     }
   }
