--- a/css/main.scss
+++ b/css/main.scss
@@ -99,10 +99,11 @@ main {
 }
 
 .poster {
+  cursor: pointer;
   width: 400px;
   height: 600px;
   position: absolute;
-  top: 15.5%;
+  top: 17%;
   transition: 0.5s;
   box-sizing: border-box;
   background-color: white;
@@ -205,11 +206,12 @@ main {
     height: 45vw;
     min-width: 300px;
     min-height: 440px;
-    transform: translateY(40px);
+    transform: translateY(20px);
   }
 
   .p1 {
-    right: 7vw;
+    cursor: pointer;
+    right: 8vw;
     img {
       width: 30vw;
       min-width: 280px;
@@ -220,8 +222,9 @@ main {
   }
 
   .p2 {
-    left: 7vw;
+    left: 8vw;
     img {
+      cursor: pointer;
       width: 30vw;
       min-width: 290px;
       display: block;
@@ -232,4 +235,74 @@ main {
 }
 
 @media only screen and (max-width: 768px) {
+  main {
+    .poster2ex,
+    .posterex {
+      opacity: 0;
+      width: 50%;
+    }
+
+    .bg1 {
+      .poster2ex {
+        right: 0;
+      }
+    }
+    .bg2 {
+      .posterex {
+        left: 0;
+      }
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      transform: translateY(50px);
+    }
+
+    li {
+      font-size: 1rem;
+    }
+  }
+
+  .poster {
+    width: 30vw;
+    height: 40vw;
+    min-width: 270px;
+    min-height: 400px;
+    transform: translateY(70px);
+  }
+
+  .p1 {
+    cursor: pointer;
+    right: 3vw;
+    img {
+      width: 30vw;
+      min-width: 240px;
+      display: block;
+      z-index: 1;
+      border: 1px solid rgb(226, 226, 226);
+    }
+  }
+
+  .p2 {
+    left: 3vw;
+    img {
+      cursor: pointer;
+      width: 30vw;
+      min-width: 260px;
+      display: block;
+      z-index: 1;
+      border: 1px solid rgb(147, 147, 147);
+    }
+  }
+
+  .clickguide {
+    p {
+      &:nth-child(1) {
+        transform: translateX(-20px);
+      }
+      &:nth-child(2) {
+        transform: translateX(20px);
+      }
+    }
+  }
 }
