--- a/css/index.scss
+++ b/css/index.scss
@@ -38,16 +38,25 @@ $ticket-red: rgb(216, 85, 96);
   .infoCon {
     border-radius: 20px;
     max-width: 1200px;
-    height: 500px;
+    height: 650px;
     background-color: white;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     padding: 0;
+    position: relative;
+    align-items: center;
+
+    h2 {
+      position: absolute;
+      left: 50%;
+      top: 50px;
+      transform: translateX(-50%);
+      font-size: 35px;
+      margin: 0;
+    }
 
     figure {
-      width: 30%;
+      width: 35%;
       height: 100%;
       margin-right: 2vw;
       display: flex;
@@ -67,8 +76,14 @@ $ticket-red: rgb(216, 85, 96);
         }
       }
     }
+
+    .infoBox {
+      height: 60%;
+      display: flex;
+      flex-direction: column;
+    }
     .info1 {
-      line-height: 160%;
+      line-height: 180%;
       height: 40%;
       margin: 0;
       display: flex;
@@ -78,7 +93,6 @@ $ticket-red: rgb(216, 85, 96);
       display: flex;
       flex-wrap: wrap;
       height: 45%;
-      width: 50%;
       margin: 0;
       padding: 0;
 
@@ -113,6 +127,16 @@ $ticket-red: rgb(216, 85, 96);
           display: flex;
           align-items: end;
           transform: translateY(-6px);
+          position: relative;
+          a::after {
+            content: "";
+            background-color: rgb(108, 108, 108);
+            position: absolute;
+            bottom: -3px;
+            left: 0;
+            width: 100%;
+            height: 1px;
+          }
           &:nth-child(1) {
             font-size: 0.8rem;
             position: absolute;
@@ -235,7 +259,6 @@ section.skillInfo {
     }
   }
 }
-
 section.timlineInfo {
   position: relative;
   width: 100%;
