메인화면 ui수정

--- a/css/projects.css
+++ b/css/projects.css
@@ -590,4 +590,4 @@
     border: none;
     padding-top: 10px;
   }
-}/*# sourceMappingURL=sub2.css.map */
+}/*# sourceMappingURL=projects.css.map */
